CHT-145: Add FlowControl filter